[package]
name = "win-sys"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
widestring = "0.5"

[dependencies.windows]
version = "0.26"
features = [
    "Win32_System_Memory",
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_SystemServices",
]