[package]
name = "win-sys"
version = "0.1.0"
edition = "2021"

readme = "README.md"
documentation = "https://docs.rs/win-sys"
repository = "https://github.com/elast0ny/win-sys"
keywords = ["windows", "native", "system", "api"]
categories = [
    "api-bindings",
    "os::windows-apis",
]

[dependencies]
widestring = "0.5"

[dependencies.windows]
version = "0.26"
features = [
    "Win32_System_Memory",
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_SystemServices",
]