[package]
name = "win-sys"
description = "Thin Rust wrapper around some Windows native apis"
version = "0.2.0"
authors = ["ElasT0ny <elast0ny00@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"

readme = "README.md"
documentation = "https://docs.rs/win-sys"
repository = "https://github.com/elast0ny/win-sys"
keywords = ["windows", "native", "system", "api"]
categories = [
    "api-bindings",
    "os::windows-apis",
]

[dependencies]
widestring = "0.5"

[dependencies.windows]
version = "0.32"
features = [
    "Win32_System_Memory",
    "Win32_Storage_FileSystem",
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_SystemServices",
]